--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Press and hold 'A' to turn left<br>
+		    Press and hold 'S' to move down<br>
+		    Press and hold 'W' to move up<br>
+		    Press and hold 'D' to turn right<br>
 	    </footer>
 	</body>
 </html>
