--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		    Press and hold 'S' to move down<br>
 		    Press and hold 'W' to move up<br>
 		    Press and hold 'D' to turn right<br>
+		    Press 'E' to hyperspace
 	    </footer>
 	</body>
 </html>
