--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 		    Press and hold 'S' to move down<br>
 		    Press and hold 'W' to move up<br>
 		    Press and hold 'D' to turn right<br>
-		    Press 'E' to hyperspace
+		    Press 'E' to hyperspace<br>
+		    Press 'Q' to shoot
 	    </footer>
 	</body>
 </html>
